Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11803

wrong declaration of IsTextUnicode (advapi32)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.3
    • None

    Description

      AdvApi32 redirects this function to ntdll.RtlIsTextUnicode. RtlIsTextUnicode returns a BOOLEAN-(byte)-Value. IsTextUnicode should return BOOL (LONGBOOL).

      In MSVC-Builds you can get True instead of False. (only al is set for result).
      GCC sets ax, so it makes no differece.

      Attachments

        Activity

          People

            hbelusca hbelusca
            andy-123 andy-123
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: