[APITESTS]: Add a test for advapi32!IsTextUnicode. CORE-11803

svn path=/trunk/; revision=72148