rostests/apitests/advapi32/testlist.c
@@ -6,6 +6,7 @@
 extern void func_CreateService(void);
 extern void func_DuplicateTokenEx(void);
 extern void func_HKEY_CLASSES_ROOT(void);
+extern void func_IsTextUnicode(void);
 extern void func_LockDatabase(void);
 extern void func_QueryServiceConfig2(void);
 extern void func_RegEnumValueW(void);
@@ -18,6 +19,7 @@ const struct test winetest_testlist[] =
     { "CreateService", func_CreateService },
     { "DuplicateTokenEx", func_DuplicateTokenEx },
     { "HKEY_CLASSES_ROOT", func_HKEY_CLASSES_ROOT },
+    { "IsTextUnicode" , func_IsTextUnicode },
     { "LockDatabase" , func_LockDatabase },
     { "QueryServiceConfig2", func_QueryServiceConfig2 },
     { "RegEnumValueW", func_RegEnumValueW },
